[20250101]운영 반영중 Socket 에러 해결 주문 백엔드 로직 정리